# skeleton

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile.golang  Dockerfile.python  LICENSE  Makefile  README.md  api.http  buf.gen.yaml  buf.yaml  docker-compose.devcontainer.yml  docker-compose.yml  go.mod  go.sum  init.sh  kind.yaml  localhost.http  pyproject.toml  skaffold.app.yaml  skaffold.dapr.yaml  skaffold.yaml
.devcontainer/: Dockerfile  Makefile  devcontainer.json
api/echo/v1/: echo.proto
api/greeter/v1/: greeter.proto
backend/api/gateway/: Makefile
backend/svc/echo/: Makefile  main.go
backend/svc/greeter/: Makefile  main.go
backend/svc/greeter/handler/: greeter.go
manifests/base/: api-gateway.yaml  common.yaml  gateway.yaml  greeter.yaml  kustomization.yaml  svc-echo.yaml  svc-greeter.yaml
manifests/overlays/localhost/: kustomization.yaml
manifests/overlays/production/: app.yaml  kustomization.yaml  lb.yaml
microservices/api/gateway/: Makefile  main.go
microservices/gateway/: Makefile  main.go
microservices/greeter/: Makefile  main.go
microservices/svc/echo/: Makefile  conf.py  main.go  run.py  server.py
microservices/svc/echo/handler/: __init__.py  echo.go  echo.py
microservices/svc/greeter/: Makefile  main.go
